[gd_scene load_steps=6 format=3]

[ext_resource type="Theme" uid="uid://os7lai20iikc" path="res://Resources/Fonts/MainTheme.tres" id="1_jeje7"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="2_2i7v2"]
[ext_resource type="PackedScene" uid="uid://dxu5crud0musu" path="res://Scenes/UI/ConfigMenu.tscn" id="3_66j6b"]

[sub_resource type="InputEventAction" id="InputEventAction_cskm6"]
action = &"ui_pause"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_opk4m"]
events = [SubResource("InputEventAction_cskm6")]

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jeje7")
color = Color(1, 1, 1, 0)
script = ExtResource("2_2i7v2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSA"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
shortcut = SubResource("Shortcut_opk4m")
text = "CONTINUAR"

[node name="ConfigButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CONFIGURAÇÕES"

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "VOLTAR AO MENU PRINCIPAL"

[node name="ConfigMenu" parent="." instance=ExtResource("3_66j6b")]
visible = false

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="go_to_mainMenu"]
